tests-integration/tests/roundtrip/native-errors/syntax-errors/unsupported-statement/unsupported-statement.eprime
find x: int(1..5)
print x